Bug 1215484 - make SVG in an image context ignore author colours to match how we treat raster images, and in a non-image context respect them to match html. f=dao, r=roc